# dexllm-web

./: README.md  dangerous_perm_api.json  dexllm.js  dexllm.wasm  index.html  perm_api.json  perm_levels.json  worker.js
cmd/dexllm-web/: .gitignore  README.md  build.sh  go.mod  main.go
docs/: d3-pc-line-map.md  dexllm-integration.md  xref.md
wasm-build/: .gitignore  CMakeLists.txt  README.md  smoke.mjs  wasm_module.cpp
